--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>第1回 ふにっと ハッカソン</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -28,7 +29,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="">概要</h3></div>
+          <h3 class="">概要</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -47,7 +49,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="">目的</h3></div>
+          <h3 class="">目的</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -64,7 +67,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="">開催予定日</h3></div>
+          <h3 class="">開催予定日</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -77,7 +81,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="">開催場所</h3></div>
+          <h3 class="">開催場所</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -90,7 +95,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h3 class="">予定</h3></div>
+          <h3 class="">予定</h3>
+        </div>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -110,7 +116,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <address class="m-y-3 text-xs-center"><b>主催 : TaikiFnit<br>Contact: taikifnitspg@gmail.com<br></b></address>
+          <address class="m-y-3 text-xs-center">
+                            <b>主催 : TaikiFnit
+                                <br>Contact: taikifnitspg@gmail.com
+                                <br>
+                            </b>
+                        </address>
         </div>
       </div>
     </div>
