--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="ja">
 
 <head>
   <title>第1回 ふにっと ハッカソン</title>
@@ -14,6 +14,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
+          <h1 class="display-4 p-y-1 text-inverse text-xs-center">2017年 1月 2,3日</h1>
           <h1 class="display-3 pi-draggable pi-item text-inverse">第1回 ふにっと ハッカソン</h1>
         </div>
       </div>
@@ -21,115 +22,116 @@
         <div class="col-md-12 p-y-1">
           <p class="lead text-inverse">2017年もいいDevelop Yearになるように、ハッカソンをやります
             <br>アプリ、ゲーム、ウェブサイト等々,ジャンル不問で各々が好きなものを好きな手段で作りましょう</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="m-y-3 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="">概要</h3>
+    <div class="m-y-3 section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="">概要</h3>
+          </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p class="lead">ハッカソンです。
-            <br>約1日でアプリなどの成果物を完成させます。
-            <br>開会はみんなで集まって、テーマを決定します。
-            <br>テーマが決まったら、アイディアを出しをしたり、チームを結束したりします。
-            <br>約1日後に成果物に関するプレゼンを行って閉会です。
-            <br>
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="m-y-3 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="">目的</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <ul class="">
-            <li class="lead">2017年もいいスタートをきれるように、新年早々頑張ります</li>
-            <li class="lead">みんなでアプリ開発等を楽しみます</li>
-            <li class="lead">エンジニアとしてのスキルアップを目指します</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="m-y-3 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="">開催予定日</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p class="lead">2017年1月2日-3日</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="m-y-3 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="">開催場所</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <p class="lead">未定(リモートでもok)</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="m-y-3 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h3 class="">予定</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <ol class="lead">
-            <li>どっかに集まって, テーマを決定</li>
-            <li>テーマ決定後、アイディアを考えて、こんな感じのを作りますというものを宣言 &lt;- ここ重要</li>
-            <li>テーマに沿ったアプリ・システム・ゲーム等々の開発を行う(チーム開発もあり)
+        <div class="row">
+          <div class="col-md-12">
+            <p class="lead">身内のハッカソンです。
+              <br>約1日でアプリなどの成果物を完成させます。
+              <br>開会はみんなで集まって、テーマを決定します。
+              <br>テーマが決まったら、アイディアを出しをしたり、チームを結束したりします。
+              <br>約1日後に成果物に関するプレゼンを行って閉会です。
+              <br>* ふにっとはハッカソンが初めてなので、ガチイベントというよりはゆるめでやりたいと思ってます
               <br>
-            </li>
-            <li>次の日の正午あたりに作ったものをプレゼンする</li>
-          </ol>
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <div class="bg-info p-y-0 section">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <address class="m-y-3 text-xs-center">
-                            <b>主催 : TaikiFnit
-                                <br>Contact: taikifnitspg@gmail.com
-                                <br>
-                            </b>
-                        </address>
+    <div class="m-y-3 section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="">目的</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <ul class="">
+              <li class="lead">2017年もいいスタートをきれるように、新年早々頑張ります</li>
+              <li class="lead">みんなでアプリ開発等を楽しみます</li>
+              <li class="lead">エンジニアとしてのスキルアップを目指します</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
+    <div class="m-y-3 section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="">開催予定日</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="lead">2017年1月2日-3日</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="m-y-3 section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="">開催場所</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="lead">未定(リモートでもok)</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="m-y-3 section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h3 class="">予定</h3>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <ol class="lead">
+              <li>どっかに集まって, テーマを決定</li>
+              <li>テーマ決定後、アイディアを考えて、こんな感じのを作りますというものを宣言 &lt;- ここ重要</li>
+              <li>テーマに沿ったアプリ・システム・ゲーム等々の開発を行う(チーム開発もあり)
+                <br>
+              </li>
+              <li>次の日の正午あたりに作ったものをプレゼンする</li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="bg-info p-y-0 section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+            <address class="m-y-3 text-xs-center">
+              <b>主催 : TaikiFnit
+                <br>Contact: taikifnitspg@gmail.com
+                <br>
+              </b>
+            </address>
+          </div>
+        </div>
+      </div>
+    </div>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
 
 
-</body>
+  </body>
 
-</html>
+  </html>
