add program comment

--- a/index.html
+++ b/index.html
@@ -1,4 +1,18 @@
+<!doctype html>
 <html lang="ja">
+<!--
+###
+### このウェブサイトは bootstrap builder の pingendo 4 で作りました
+### HTML, CSSを知らなくても手軽にこのようなウェブサイトを構築することができます
+### ソースコードについては、あまりきれいとは言えませんが、生産性の面を考えると、かなり便利だと思います
+### ぜひ、様々なツールを活用して、快適なエンジニアライフを過ごしましょう!
+###
+###            o　　　ﾟ　o　　　　ﾟ　　ﾟ　　o
+###           　○ ＜"￣＼ 。　o .　ﾟTaiki Fnit　｡
+###           。 ﾟ.o |＿＿__） 。.ﾟ　　from Iwate
+###           　。ヽ(´・ω・`)/　。ﾟ　　　　o
+###           。　 （::. 　　 ）。　ﾟ.　　o
+-->
 
 <head>
   <title>第1回 ふにっと ハッカソン</title>
@@ -130,8 +144,5 @@
     </div>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
-
-
   </body>
-
   </html>
