change position of comments

--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!doctype html>
 <html lang="ja">
-<!--
-###
-### このウェブサイトは bootstrap builder の pingendo 4 で作りました
-### HTML, CSSを知らなくても手軽にこのようなウェブサイトを構築することができます
-### ソースコードについては、あまりきれいとは言えませんが、生産性の面を考えると、かなり便利だと思います
-### ぜひ、様々なツールを活用して、快適なエンジニアライフを過ごしましょう!
-###
-###            o　　　ﾟ　o　　　　ﾟ　　ﾟ　　o
-###           　○ ＜"￣＼ 。　o .　ﾟTaiki Fnit　｡
-###           。 ﾟ.o |＿＿__） 。.ﾟ　　from Iwate
-###           　。ヽ(´・ω・`)/　。ﾟ　　　　o
-###           。　 （::. 　　 ）。　ﾟ.　　o
--->
-
 <head>
+<!--
+#
+#
+#
+# このウェブサイトは bootstrap builder の pingendo 4 で作りました
+#
+# HTML, CSSを知らなくても手軽にこのようなウェブサイトを構築することができます
+#
+# ソースコードについては、あまりきれいとは言えませんが、生産性の面を考えると、かなり便利だと思います
+#
+# ぜひ、様々なツールを活用して、快適なエンジニアライフを過ごしましょう!
+#
+#
+#
+#
+#                 o　　　ﾟ　o　　　　ﾟ　　ﾟ　　o
+#                　○ ＜"￣＼ 。　o .　ﾟTaiki Fnit　｡
+#                。 ﾟ.o |＿＿__） 。.ﾟ　　from Iwate
+#                　。ヽ(´・ω・`)/　。ﾟ　　　　o
+#                。　 （::. 　　 ）。　ﾟ.　　o
+#
+#
+#
+-->
   <title>第1回 ふにっと ハッカソン</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
