--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="ja">
+<html>
+
 <head>
 <!--
 #
@@ -24,11 +25,11 @@
 #
 #
 -->
-  <title>第1回 ふにっと ハッカソン</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href="style.css" rel="stylesheet" type="text/css">
+<title>第1回 ふにっと ハッカソン</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -137,7 +138,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-info p-y-0 section">
+    <div class="bg-inverse p-y-0 section">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -156,5 +157,5 @@
 
 
   </body>
-  
+
   </html>
